Fix missing margin bottom on nav section

--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -26,7 +26,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 3rem;
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
@@ -45,6 +44,7 @@
         align-items: center;
         opacity: 1;
         visibility: visible;
+        height: auto;
     }
     a {
         color: $blanco;
